@@ -3,5 +3,5 @@ feedback_general=https://darwinsys.com/contact?subject=PdfShow%20Feedback
 feedback_bug_enhance=https://github.com/IanDarwin/pdfshow/issues
 feedback_email=pdfshow@darwinsys.com
 source_url=https://github.com/IanDarwin/pdfshow
-home_url=https://github.com/IanDarwin/pdfshow
+home_url=https://darwinsys.com/pdfshow
 version=v${project.version}
